--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9.22"
-dependencies = []
+dependencies = [
+    "flask>=3.1.1",
+    "requests>=2.32.3",
+]
